config/networkpolicy/odf-operator/odf-blackbox-exporter-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: odf-blackbox-exporter
  namespace: openshift-storage
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: odf-blackbox-exporter
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-storage
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 80
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-monitoring
    ports:
    - protocol: TCP
      port: 9115
