config/networkpolicy/odf-operator/odf-external-snapshotter-operator-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: odf-external-snapshotter-operator
  namespace: openshift-storage
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: odf-external-snapshotter-operator
  policyTypes:
  - Ingress
