config/networkpolicy/odf-operator/odf-operator-controller-manager-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: odf-operator-controller-manager
  namespace: openshift-storage
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: odf-operator
      control-plane: controller-manager
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-monitoring
    ports:
    - protocol: TCP
      port: 8443
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-kube-apiserver
    ports:
    - protocol: TCP
      port: 9443
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-storage
    ports:
    - protocol: TCP
      port: 9443
